[package]
name = "uwupm"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "BSD-3-Clause"

[dependencies]
cc = "1.0"
libc = "0.2.174"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
indicatif = "0.18"
terminal_size = "0.4.2"
flate2 = "1.0"
tar = "0.4"

